# CRT

./: CMakeLists.txt  Makefile  README.md  setup.sh
shaders/: LICENSE.txt  fakelottes-geom.glsl  film_noise.glsl  readme.md  vhs.glsl
src/: main.cpp  sdl_compat.h
